stylesheets/home.css
:root {
  /* Colors */
  --color-text: #333;
  --color-background: #fff;
  --color-card-back: lightgray;
  --color-card-back-hover: gray;
  --color-card-matched: lightgreen;
  --color-card-border: black;

  /* Layout */
  --vertical-info-height: 20vh;
  --vertical-game-height: 67vh;
  --vertical-spacer-height: 20vh;
  --horizontal-game-width: 60%;
  --horizontal-score-width: 30%;
  --progress-border-radius: 20px;

  /* Spacing */
  --spacing-small: 0.5rem;
  --spacing-medium: 1rem;
  --spacing-large: 2rem;

  /* Typography */
  --font-size-normal: 1rem;
  --font-size-title: 1.5rem;
  --font-size-subtitle: 1.2rem;
  --font-family: Tahoma, Verdana, Arial, sans-serif;

  /* Breakpoints
   I would really like to use these in my media queries
   but css by default does not support this without a preprocessor */
  --xs: 0;
  --sm: 576px;
  --md: 768px;
  --lg: 992px;
  --xl: 1200px;
  --xxl: 1400px;
}

html {
  color-scheme: light dark;
}

body {
  margin: 0 auto;
  font-family: var(--font-family);
  display: flex;
  flex-direction: column;
  padding: 5vh 0;
  width: 100%;
  height: 100vh;
  box-sizing: border-box;
}

/* Layout */
div.layout {
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: center;

  @media (min-width: 768px) {
    display: flex;
    flex-direction: row;
  }

  & > div.layout__column {
    display: flex;
    flex-direction: column;
  }

  div.layout__column--left {
    @media (min-width: 768px) {
      width: var(--horizontal-game-width);
    }
  }

  & > div.layout__column--right {
    padding: var(--spacing-large);

    @media (min-width: 768px) {
      width: var(--horizontal-score-width);
    }
  }
}

/* Info box */
div.info {
  padding: var(--spacing-medium);

  @media (min-width: 768px) {
    height: var(--vertical-info-height);
  }

  & > p.info__title {
    display: flex;
    justify-content: center;
    font-size: var(--font-size-title);
    font-weight: bold;
    margin-bottom: var(--spacing-medium);
  }

  & > div,p.info__item {
    display: flex;
    justify-content: center;
    margin-bottom: var(--spacing-small);
  }

  div.info__time__progressbar {
    display: flex;
    flex-direction: row;
    justify-items: center;
    align-content: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: var(--spacing-small);
    height: 40px;
    width: 250px;
    background-color: var(--color-card-back);
    border-radius: var(--progress-border-radius);

  }
  div.info__time__progressbar--bar{
    height: 65%;
    width: 90%;
    background-color: var(--color-text);
    border-radius: var(--progress-border-radius);
  }
}

/* Game box */
div.game {
  height: var(--vertical-game-height);
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  & > div.game__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: var(--spacing-small);
    margin-left: var(--spacing-small);
  }
}

/* Cards */
div.card {
  display: inline-block;
  height: 100%;
  width: 13.3%;
  line-height: 10vh;
  text-align: center;
  aspect-ratio: 1 / 1;
  box-sizing: border-box;
  background-color: var(--color-card-back);
  cursor: pointer;
  margin-right: var(--spacing-small);
  border-radius: var(--progress-border-radius);
  justify-content: space-around;

  @media (min-width: 768px) {
    width: 15%;
    height: 10vh;
  }

  &:hover {
    filter: brightness(150%);
  }

  & > div.card:last-child {
    margin-right: 0;
  }

  & > div.card--flipped {
    background-color: var(--color-background);
  }

  & > div.card--matched {
    background-color: var(--color-card-matched);
  }
}

div.sidebar {
  height: var(--vertical-game-height);
  padding: var(--spacing-medium);
}
img.card-image {
  object-fit: cover;
  justify-self: center;
  height: 90%;
  width: 90%;
  border-radius: var(--progress-border-radius);
}

/* Score box */
div.score {
  & > p.score__title {
    font-size: var(--font-size-subtitle);
    margin-bottom: var(--spacing-medium);
  }

  & > ul.score__list {
    list-style-type: none;
    padding: 0;
  }

  & > li.score__item {
    margin-bottom: var(--spacing-small);
  }
}
div.playtime {
  margin-top: var(--spacing-medium);
}

div.playtime__title {
  display: inline;
  font-size: var(--font-size-subtitle);
  margin-bottom: var(--spacing-medium);
}

div.playtime__time {
  display: inline;
}

div.settings {
  margin-top: var(--spacing-medium);
}

div.settings__board {
  margin-top: var(--spacing-medium);
}

div.settings__colors {
  margin-top: var(--spacing-medium);
  display: flex;
  flex-direction: column;
}

select.board__selector {
  height: 25px;
  margin-top: var(--spacing-small);
}

button.colors_card_button {
  font-size: var(--font-size-normal);
  max-width: 60%;
  height: 50px;
  margin-top: var(--spacing-small);

}

/* Spacer box above score */
div.spacer {
  display: none;

  @media (min-width: 768px) {
    display: block;
    height: var(--vertical-spacer-height);
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-text: #f5f5f5;
    --color-background: #222;
    --color-card-back: #444;
    --color-card-border: #777;
  }

  body {
    color: var(--color-text);
    background-color: var(--color-background);
  }
}

